themes/editorial/css/custom.css
/*# sourceMappingURL=custom.css.map */

/*************************/
/*******  home ***********/
/*************************/
.swipe-area {
    position: absolute;
    float: left;
    width: 2em;
    height: 100%;
}

.active:last-child {
    margin-right: -17%;
    background-color: #ffffff;
    padding: 10px !important;
    margin-left: -10px;
}


#sidebar nav a, #sidebar section a {
    text-transform: uppercase;
    font-size: 1em;
    padding: 0.625em 0;
    display: block;
    border-bottom: none;
}

.news--header{
    margin-bottom: 0.3em;
}
.news--Pictures{
    margin-bottom: 0.5em;
    margin-top: 0.5em;
}





/* The Modal (background) */
.news--modal, #plan--modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 10001; /* Sit on top */
    padding-top: 50px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
#plan--modal {
    padding-top: 150px; /* Location of the box */
}

/* Modal Content */
.news--modal-content, #plan--modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    max-width: 700px;
    margin-bottom: 100px;
}

/* modal obsah */
#News--submit-all {
    margin-right:5px;
}
.News--img-settings{
    height: 1.8em;
    border-radius: 0px;
    margin-right: 1.2em;
    position: relative;
    left: -1px;
}
.News--img-label, .News--img-settings, .News--img-delete-button{
    display: inline;
}
.News--img-delete{
    width: 1.8em;
    padding: 0 0.6rem;
    display: inline-block;
}
#News--header {
    display: block;
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

#News--title{
    margin-bottom: 1rem;
    width: 100%;
}

#News--pictures{
    margin-bottom: 1rem;
    margin-top: 1rem
}

#News--deleteButtonSpan, #News--close{
    float: right;
}

#News--form{
    margin: 0;
}
.CodeMirror, .CodeMirror-scroll {
    min-height: 200px;

}
/* uprava dropzone */
#NewsDropzone{
    margin-bottom: 1em;
    border-top-left-radius: 0px;
    border-top-right-radius: 0px;
    border-bottom-left-radius: .375em;
    border-bottom-right-radius: .375em;
}
.editor-toolbar{
    border-top-left-radius: .375em;
    border-top-right-radius: .375em;
}
.dropzone .dz-preview .dz-image {
    border-radius: 10px;
}
.dropzone{
    min-height: 0px;
}
/* nacitaci animace "..." */
.loader,
.loader:before,
.loader:after {
    border-radius: 50%;
    width: 2.5em;
    height: 2.5em;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
    -webkit-animation: load7 1.8s infinite ease-in-out;
    animation: load7 1.8s infinite ease-in-out;
}
.loader {
    color: #252d33;
    font-size: 10px;
    margin: 3px auto;
    position: relative;
    text-indent: -9999em;
    -webkit-transform: translateZ(0);
    -ms-transform: translateZ(0);
    transform: translateZ(0);
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}
.loader:before,
.loader:after {
    content: '';
    position: absolute;
    top: 0;
}
.loader:before {
    left: -3.5em;
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}
.loader:after {
    left: 3.5em;
}
@-webkit-keyframes load7 {
    0%,
    80%,
    100% {
        box-shadow: 0 2.5em 0 -1.3em;
    }
    40% {
        box-shadow: 0 2.5em 0 0;
    }
}
@keyframes load7 {
    0%,
    80%,
    100% {
        box-shadow: 0 2.5em 0 -1.3em;
    }
    40% {
        box-shadow: 0 2.5em 0 0;
    }
}
/* AJAX response*/
/* error pri ajax odesilani novinek */
.ajaxError{
    color: #252d33 !important;
    margin: 50px auto;
    position: relative;
    text-align: center;
}
.ajaxErrorText{
    font-size: 1.5em;
    font-weight: bold;
}
.ajaxErrorNote{
    opacity: 0.6;
}

/*********************************/
/**** pravidelne treninky ********/
/*********************************/

@media screen and (min-width: 64em){
    #tables{
        order: 1;
    }
    #control{
        order: 2;
    }
}
.meetup input {
    width: 4.8em;
}
.weeklyHeader{
    color: white;
    font-weight: bold;
    font-size: 120%;
    background-color: #252d33;
}
.addAfter{
    text-align: center;
}
.delete {
    padding-left: 0.2em;
}


/************/
/* kontakty */
/************/
.contact--divInner {
    border: dotted;
    padding: 3em 4em 2em 4em;
    min-width: 18.3em;
    position: relative;
    align-content: center;
    width: 90%;
    margin: 0 auto;
    margin-bottom: 3em;
    height: 90%;
}
/* sponzori */
.sponsors--img {
    padding: 10%;
    margin: 0 auto;
}
/* polaris */
.polaris--outerDiv {
    padding: 10%;
}
.polaris--innerDiv {
    border: dotted;
}
.polaris--title{
    text-align: center;
    color: black;
    padding-bottom: 10%;
    font-size: 120%;
}
.polaris--delete{
    text-align: center;
    background-color: #f56a6a;
}
/* edit event */
#editEvent input, #editEvent textarea{
    width:100%;
    overflow: hidden;
    resize: none;
  }
#date1:invalid{
	color:red;
}

/* default--groups-header */
/* default--plan-header */
.groups--header.current, .plan--header.current{
    color: #222;
}
.groups--header , .plan--header{
    border-bottom: none;
    color: #999;
    font-size: 2.8vw;
}
/***********************
********** plan ********
***********************/
#plan--select-template, #plan--save-template{
    float: right;
}

#planEdit tr:hover{
    background-color: #ff4040 !important;
}


/* login section */
#auth{
    font-size: 1rem;
}
a.logout{
    font-size: 1rem !important;
}

/* definition list */
dt {
    float: left;
    text-align: right;
    width: 6em;
  }

dd {
    padding-left: 6rem;
    margin-left: 1em;
    margin-bottom: 2em;
  }
/* seznam map api fix */
#map img {
    max-width: none; 
}
#map button.plus, #map button.minus{
	color: #6b7580 !important;
	height: initial;
	border-radius: 0;
	box-shadow: none;
}



#topbar {
    position: fixed;
    height: 56px;
    left: 0px;
    right: 0px;
    top: 0px;
    background: #e6e6e6;
    box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
    line-height: 56px;
    text-align: center;
    overflow: hidden;
    z-index: 2;
}
#main, #sidebar {
    top: 56px;
}
#main {
    position: relative;
}
#topbar a {
    text-decoration: none;
    font-family: Overpass;
    color: black;
    border-bottom: none;
}
.topbar--title{
    font-size: 24px;
    left: 0;
    padding: 0 18px;
    position: fixed;
    top: 2px;
}


@media screen and (min-width: 1280px) {
    #sidebar .toggle::before, #sidebar .toggle {
        display: none; 
    }
}



#sidebar > .inner > * {
    border-bottom: none;
    padding: 0;
}

/* tabs */
.tab-folder > .tab-content:target ~ .tab-content:last-child, .tab-folder > .tab-content {
    display: none;
}
.tab-folder > :last-child, .tab-folder > .tab-content:target {
    display: block;
}


#sidebar > .inner {
    scrollbar-width: none; /*For Firefox*/
    -ms-overflow-style: none; /*For IE and Edge*/
}

#sidebar > .inner::-webkit-scrollbar {
width: 0px; /*For Chrome, Safari and Opera*/
}

/* swipe */
.slideout-menu {
  position: fixed;
  top: 0;
  bottom: 0;
  width: 0;
  min-height: 100vh;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  z-index: 0;
  display: none;
}

.slideout-menu-left {
  left: 0;
}

.slideout-menu-right {
  right: 0;
}

.slideout-panel {
  position: relative;
  z-index: 1;
  will-change: transform;
  background-color: #FFF; /* A background-color is required */
  min-height: 100vh;
}

.slideout-open,
.slideout-open body,
.slideout-open .slideout-panel {
  overflow: hidden;
}

.slideout-open .slideout-menu {
  display: block;
}
@media screen and (min-width: 1280px) {
  .slideout-panel {
    margin-left: 0;
  }

  .slideout-menu {
    display: block;
  }
}


.dim {
    width: 100%;
    height: 100%;
    z-index: 2;
    display: none;
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0,0,0,0.4);
  }

